# bicycle-power-plan

./: .gitignore  CMakeLists.txt  build-release.bat  build.bat  experiment.py
include/: BicyclePlan.h  Config.h  Cyclist.h  Encoding.h  EvolutionalStrategy.h  Track.h  timer.h  util.h
make-track-data/: split_track.py
src/: BicyclePlan.cpp  BicyclePlan_test.cpp  Config.cpp  Cyclist.cpp  Encoding.cpp  EvolutionalStrategy.cpp  Track.cpp  main.cpp  timer.cpp  util.cpp
test/analyze-tools/: analyze.py  plot_encoding.py  plot_itertime.py  plot_itertime_all.py
test/benchmark/: experiment.py
test/src/: BicyclePlan_test.cpp
tools/: bicycle-calculator.html  modify_track_attributes.py  split_gpx_track.py  track-calculator.html
